# pest-detection-model-test

./: .gitignore  ARCHITECTURE.md  HARDWARE_PROTOCOL.md  README.md  app.py  configs.py  demo.py  main.py  pyproject.toml  requirements.txt
config/: wifi_credentials.json
hardware/: arduino.py  arduino_controller.ino  motors.py
services/: asset_manager.py  camera_service.py  download_service.py  emergency_service.py  health_service.py  inference_backend.py  lifecycle_manager.py  model_service.py  network_service.py  watchdog_service.py  wifi_service.py
services/camera_backends/: __init__.py  base.py  factory.py  opencv_camera.py  v4l2_camera.py
services/inference_backends/: __init__.py  base.py  factory.py  onnx.py  tflite.py
states/: state_machine.py
utils/: logger.py
