[project]
name = "thesis-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
required-environments = [  
    "sys_platform == 'linux'",
    "platform_machine == 'armv7l'"
]
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "serial>=0.0.97",
    "numpy>=1.21",
    "tflite-runtime>=2.11.0",
]
